tests/invalid/tuple_non_literal_index/main.py
t: tuple[int, str] = (1, "x")
i: int = 1
print(t[i])
